--- a/public/css/index.css
+++ b/public/css/index.css
@@ -75,7 +75,7 @@ a {
 }
 
 /* --------------------------Menu End------------------------------ */
-/* ------------------------------Quiz Start----------------------------------- */
+/* ------------------------------Quiz 1 Start----------------------------------- */
 .quiz-container {
   display: flex;
   flex-direction: column;
@@ -181,4 +181,439 @@ a {
   background-color: #666666;
 }
 
-/* -------------------------------Quiz End---------------------------------- */
+/* -------------------------------Quiz 1 End---------------------------------- */
+/* ------------------------------Quiz 2 Start----------------------------------- */
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quiz-heading-text {
+  color: white;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.quiz-question-text {
+  font-weight: 700;
+  font-size: 60px;
+}
+
+.qui-question-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.line-1-2 {
+  background-color: #fdde03;
+  max-width: 90%;
+}
+
+.line-2-2 {
+  max-width: 100%;
+  background-color: #fdde03;
+}
+
+.quiz-answer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+#true1-2 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#false1-2 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#answer-1-2 {
+  display: flex;
+  justify-content: center;
+}
+.answer-holder {
+  width: 32.2%;
+  margin-bottom: 5%;
+}
+
+#answer-text-2 {
+}
+
+.answer-text-1-class {
+  color: white;
+}
+
+.quiz-button {
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.button-quiz {
+  width: 10px;
+  height: 17px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #666666;
+}
+
+/* -------------------------------Quiz 2 End---------------------------------- */
+/* ------------------------------Quiz 3 Start----------------------------------- */
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quiz-heading-text {
+  color: white;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.quiz-question-text {
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.qui-question-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.line-1-3 {
+  background-color: #fdde03;
+  max-width: 100%;
+}
+
+.line-2-3 {
+  max-width: 80%;
+  background-color: #fdde03;
+}
+
+.line-3-3 {
+  background-color: #fdde03;
+  max-width: 70%;
+}
+
+.quiz-answer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+#true1-3 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#false1-3 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#answer-1-3 {
+  display: flex;
+  justify-content: center;
+}
+.answer-holder {
+  width: 32.2%;
+  margin-bottom: 5%;
+}
+
+#answer-text-2 {
+}
+
+.answer-text-1-class {
+  color: white;
+}
+
+.quiz-button {
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.button-quiz {
+  width: 10px;
+  height: 17px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #666666;
+}
+
+/* -------------------------------Quiz 3 End---------------------------------- */
+/* ------------------------------Quiz 4 Start----------------------------------- */
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quiz-heading-text {
+  color: white;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.quiz-question-text {
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.qui-question-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.line-1-4 {
+  background-color: #fdde03;
+  max-width: 100%;
+}
+
+.line-2-4 {
+  max-width: 90%;
+  background-color: #fdde03;
+}
+
+
+.quiz-answer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+#true1-4 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#false1-4 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#answer-1-4 {
+  display: flex;
+  justify-content: center;
+}
+.answer-holder {
+  width: 32.2%;
+  margin-bottom: 5%;
+}
+
+
+.answer-text-1-class {
+  color: white;
+}
+
+.quiz-button {
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.button-quiz {
+  width: 10px;
+  height: 17px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #666666;
+}
+
+/* -------------------------------Quiz 4 End---------------------------------- */
+/* ------------------------------Quiz 5 Start----------------------------------- */
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.quiz-heading-text {
+  color: white;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.quiz-question-text {
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.qui-question-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.line-1-5 {
+  background-color: #fdde03;
+  max-width: 100%;
+}
+
+.line-2-5 {
+  max-width: 90%;
+  background-color: #fdde03;
+}
+
+
+.quiz-answer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+#true1-5 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#false1-5 {
+  width: 15%;
+  max-width: 15%;
+  height: 60px;
+  background-color: transparent;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 8px;
+  color: white;
+}
+
+#answer-1-5 {
+  display: flex;
+  justify-content: center;
+}
+.answer-holder {
+  width: 32.2%;
+  margin-bottom: 5%;
+}
+
+
+.answer-text-1-class {
+  color: white;
+}
+
+.quiz-button {
+  padding: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.button-quiz {
+  width: 10px;
+  height: 17px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #666666;
+}
+
+/* -------------------------------Quiz 5 End---------------------------------- */
