--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,7 +10,7 @@ body {
 }
 .menu-container {
   display: flex;
-  padding: 20px;
+  padding: 5px;
   flex-direction: column;
   width: 100%;
 }
@@ -21,25 +21,92 @@ body {
   width: 100%;
   flex-wrap: wrap;
 }
+@media only screen and (max-width:992px){
+  .menu-category {
+    flex: 1;
+  }
 
-.menu-category {
-  flex: 1;
+  #navigation {
+    /* display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 40px;
+    padding-right: 80px; */
+    display: none;
+  }
+  #menuIcon {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 10px;
+    width: 40px;
+  }
+  #panelCont {
+    display: none;
+    width: 100%;
+  }
+
+  #panel {
+    display: none;
+    background-color: #353535;
+    width: 300px;
+    height: 100vh;
+    padding: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  #close {
+    position: absolute;
+    right: 30;
+  }
+
+  #logo {
+    width: 70px;
+    height: 70px;
+  }
+  #logo-text {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #fdde03;
+    font-size: 20px;
+  }
 }
 
-#logo-text {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  color: #fdde03;
+@media only screen and (min-width:993px){
+  .menu-category {
+    flex: 1;
+  }
+
+  #navigation {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 40px;
+    padding-right: 80px;
+  }
+  #logo {
+    width: 100px;
+    height: 100px;
+  }
+  #logo-text {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #fdde03;
+    font-size: 30px;
+  }
+  #menuIcon, #panelCont {
+    display: none;
+  }
 }
+
 
 a {
   font-family: "Raleway", sans-serif;
 }
 
-#logo {
-  width: 100px;
-  height: 100px;
-}
 
 #menu-left {
   display: flex;
@@ -48,14 +115,6 @@ a {
   gap: 20px;
 }
 
-#navigation {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
-  padding-right: 80px;
-}
 
 .nav-link {
   color: white;
@@ -68,10 +127,6 @@ a {
 
 .nav-link:active {
   text-decoration: underline;
-}
-
-#logo-text {
-  font-size: 30px;
 }
 
 /* --------------------------Menu End------------------------------ */
