--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,9 @@ body {
   justify-content: center;
   margin-bottom: 50px;
   max-width: 800px;
+
+  align-items: center;
+  max-height: 50px;
 }
 
 .mapcont {
