--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,38 +12,43 @@
 .container {
   display: flex;
   flex-direction: column;
-
+  margin: 30px 30px;
+  max-width: 1210px;
 }
 .mapimg {
   width: 100%;
-  height: 100%;
+  max-width: 939px;
+  max-height: 573.94px;
 }
 .first-head {
+  max-width: 1000px;
+}
+.first-head > p{
   background-color: #fdde03;
   font-weight: bold;
   font-size: 37px;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  padding: 15px 40px 15px 15px;
+  display: inline-block;
+  margin-bottom: 40px;
   max-width: 800px;
   align-items: center;
-  max-height: 50px;
 }
 
 .mapcont {
   display: flex;
+  flex-direction: row;
 }
 
 .territories {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 228px;
-  height: 300px;
+  /* width: 228px; */
+  max-height: 300px;
   margin-left: 50px;
   margin-top: 10px;
   padding-left: 30px;
+  padding-right: 20px;
   border-left: #fdde03 solid 4px;
 }
 
@@ -51,6 +56,7 @@
   color: white;
   text-decoration: none;
   font-size: 27px;
+  margin: 10px 0;
 }
 
 /*========== MUSQUEAM PAGE============ */
@@ -64,8 +70,13 @@ a.highlight {
 }
 
 .infocont {
-  max-width: 950px;
+  max-width: 1200px;
+  margin: 50px 60px 50px 30px;
+}
+.infocont2 {
+  max-width: 1250px;
   margin-top: 50px;
+  margin-right: 60px;
 }
 
 .pronoun {
@@ -81,10 +92,10 @@ a.highlight {
 .lists {
   color: white;
   display: flex;
+  flex-direction: row;
   font-size: 20px;
   margin-top: 10px;
 }
-
 .cities {
   margin-right: 60px;
   margin-bottom: 10px;
@@ -96,7 +107,7 @@ a.highlight {
 }
 
 /* =======RESPONSIVE LAYOUT======= */
-@media only screen and (max-width:428px){
+@media only screen and (max-width:475px){
   body{
     margin: 0;
     /* justify-content: center; */
@@ -109,23 +120,25 @@ a.highlight {
     margin-right: 10%;
     margin-top: 5%;
   }
-  .first-head{
+  .infocont {
+    width: 100%;
+    /* max-width: 1250px; */
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .first-head > p {
     font-size: 20px;
-  }
-  .infocont{
-    margin-left:10%;
-  }
-  .infocont2{
-    margin-top: 50px;
-    margin-left: 0;
+    margin-bottom: 15px;
   }
   .mapcont {
     flex-direction: column;
   }
   .territories {
-    margin-top: 10%;
+    margin-top: 20px;
     margin-left: 0;
-    margin-bottom: 50px;
+    margin-bottom: 0;
+    padding-left: 20px;
   }
   .territories > a {
     font-size: 16px;
@@ -133,73 +146,138 @@ a.highlight {
   .para{
     margin-right: 10%;
   }
+  .mapimg {
+    width: 100%;
+    max-width: 939px;
+    max-height: 573.94px;
+  }
+
+  /* == territory info==================== */
+  .title {
+    color: white;
+    font-size: 24px;
+  }
+  .pronoun {
+    font-size: 16px;
+    color: #fdde03;
+  }
+  .lists {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+  .cities {
+    margin-right: 60px;
+    margin-bottom: 10px;
+  }
+  .para > p {
+    color: white;
+    font-size: 14px;
+    margin-bottom: 100px;
+  }
+  /* == territory info end=============== */
 
 }
-@media only screen and (min-width:429px) and (max-width: 1024px) {
+@media only screen and (min-width:476px) and (max-width: 1024px) {
   body{
     margin: 0;
   }
   .container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%;
   }
-  .first-head > p{
+  .first-head > p {
+    /* max-width: 500px; */
+    margin-bottom: 20px;
     font-size: 27px;
-    padding: 15px;
-  }
-  .infocont{
-    margin-left:10%;
-  }
-  .infocont2{
-    margin-top: 50px;
-    margin-left: 0;
+    /* padding: 15px; */
   }
   .mapcont {
     flex-direction: column;
   }
+  .infocont {
+    width: 100%;
+    /* max-width: 1250px; */
+    margin-top: 25px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .infocont2 {
+    max-width: 1250px;
+
+    margin: 0;
+    margin-top: 20px;
+    padding: 0;
+    
+  }
+  .mapimg {
+    width: 100%;
+  }
   .territories {
-    margin-top: 10%;
+    margin-top: 20px;
     margin-left: 0;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
   .territories > a {
-    font-size: 26px;
+    font-size: 20px;
   }
   .para{
     margin-right: 10%;
   }
+  /* == territory info==================== */
+  .title {
+    color: white;
+    font-size: 24px;
+  }
+  .pronoun {
+    font-size: 16px;
+    color: #fdde03;
+  }
+  .lists {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  .cities {
+    margin-right: 60px;
+    margin-bottom: 10px;
+  }
+  .para > p {
+    color: white;
+    font-size: 16px;
+    margin-bottom: 100px;
+  }
+  /* == territory info end=============== */
 }
 @media only screen and (min-width:1025px){
   body{
     margin: 0;
+    justify-content: center;
   }
   .container {
     display: flex;
     justify-content: center;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 5%;
+    margin: 30px 30px;
   }
-  .first-head{
-    justify-content: left;
+  .first-head > p {
     font-size: 38px;
   }
-  .infocont{
-    margin-left:10%;
+  .mapcont {
+    flex-direction: row;
+    width: 100%;
   }
-  .infocont2{
-    margin-top: 50px;
-    margin-left: 0;
-  }
-
-  .territories {
-    margin-top: 10%;
-    margin-left: 5%;
-    margin-bottom: 50px;
+  .mapimg {
+    width: 75%;
+    max-width: 939px;
+    max-height: 573.94px;
   }
   .territories > a {
     font-size: 26px;
