updated html links and changed the questions

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -295,12 +295,21 @@ a {
   max-width: 70%;
 }
 
+.anQuiz-holder {
+  min-width: 30%;
+  max-width: 50%;
+}
+
 .quiz-question-text {
   font-weight: 700;
   font-size: 60px;
   padding: 0 0.25em;
   margin: 0;
 }
+
+/* .quiz-number {
+
+} */
 
 /* BUTTON */
 .answer-bttn {
@@ -329,6 +338,15 @@ a {
 .answer-text-1-class {
   color: white;
   line-height: 1.75em;
+}
+
+.true-false {
+  background-color: #fdde03;
+  padding: 5px;
+  font-size: 24px;
+  color: #000;
+  font-weight: 700;
+  margin-right: 15px;
 }
 
 /* BUTTON */
@@ -415,6 +433,11 @@ button.select {
     font-size: 12px;
   }
 
+  .true-false {
+    font-size: 16px;
+    margin-right: 10px;
+  }
+
   .answer-bttn {
     width: 40%;
     max-width: 40%;
@@ -463,6 +486,11 @@ button.select {
     font-size: 14px;
   }
 
+  .true-false {
+    font-size: 20px;
+    margin-right: 15px;
+  }
+
   .answer-bttn {
     width: 40%;
     max-width: 40%;
@@ -490,6 +518,11 @@ button.select {
 
   .answer-holder {
     width: 50%;
+  }
+
+  .true-false {
+    font-size: 24px;
+    margin-right: 15px;
   }
 
   .answer-bttn {
